--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.0.3
 django-bootstrap4==22.1
 django-heroku==0.3.1
 gunicorn==20.1.0
+mysqlclient==2.1.0
 psycopg2==2.9.3
 soupsieve==2.3.1
 sqlparse==0.4.2
